--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "gencord",
-  "version": "0.0.4",
+  "version": "0.0.1",
   "description": "A simple, beginner friendly, and easy to use library for interacting with the Discord API, with minimal syntax",
   "main": "dist/index.js",
-  "types": "dist/typings/typings.d.ts",
+  "typings": "dist/typings/typings.d.ts",
   "scripts": {
     "docs": "typedoc --out docs src",
     "test": "tsc && node dist/src/test/test",
