refactor(embed): update various things for embeds

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "docs": "typedoc --out docs src",
     "test": "tsc && node dist/src/test/test",
-    "test-dev": "ts-node src/test/test.ts",
+    "test:dev": "ts-node-dev --respawn --transpile-only --poll ./src/test/test.ts",
     "test-respawn": "ts-node-dev --respawn --transpile-only src/test/test.ts",
     "lint": "prettier --write ."
   },
