--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "^14.14.20",
     "@types/node-fetch": "^2.5.7",
     "@types/ws": "^7.4.0",
+    "glob": "^7.1.6",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.1",
@@ -35,6 +36,7 @@
   },
   "dependencies": {
     "node-fetch": "^2.6.1",
+    "pkg-dir": "^5.0.0",
     "ws": "^7.4.2"
   }
 }
