--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Gencord/gencord#readme",
   "devDependencies": {
     "@types/node": "^14.14.37",
+    "@types/node-fetch": "^2.5.10",
     "@types/ws": "^7.4.1",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
@@ -27,6 +28,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "node-fetch": "^2.6.1",
     "ws": "^7.4.4"
   }
 }
