(fix): Updated removeComments key.
Set removeComments to false as documented code are a comment, but at build time they were being removed as a result of this property.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "sourceMap": true,
     "outDir": "./dist",
     "moduleResolution": "node",
-    "removeComments": true,
+    "removeComments": false, //set to false because of documentation of code.
     "noImplicitAny": true,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
